Corrected breadcrumbs on mobile

--- a/public_html/layouts/basic/styles/libraries/_Bootstrap.scss
+++ b/public_html/layouts/basic/styles/libraries/_Bootstrap.scss
@@ -142,3 +142,13 @@ label.btn[class*="btn-outline-"] {
 		@extend .form-control-sm;
 	}
 }
+.breadcrumb-item + .breadcrumb-item {
+	@include media-breakpoint-down(sm) {
+		padding-left: calculate-rem(2px);
+	}
+	&::before {
+		@include media-breakpoint-down(sm) {
+			padding-right: calculate-rem(2px);
+		}
+	}
+}
